# CS7610

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  basic.hpp  conanfile.txt  curl.sh  funcexecuter.hpp  funclaunch.hpp  funcmanager.hpp  funcregister.hpp  funcscheduler.hpp  funcstorage.hpp  funcworker.hpp  main.cpp  test.sh
client/: client.py
developer/: developer_1.py  developer_1.test.py  library.py  main.py  storage.py
profiles/: debug  release-native
